# vision_guided_sorting

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.bak  Draft_Development_Experience.odt  HARDWARE_TRANSITION_GUIDE.md  Motion_and_Coordination_Subsystems.docx  Operating_Instructions_Rewritten.docx  Polished_Technical_Manual.docx  Quick_Start_Cheat_Sheet.docx  README.md  REFACTORING_GUIDE.md  SIMPLIFIED_REFACTORING.md  Screencast from 02-10-2026 ursim-moveit2-ros2humble-ur12e.webm  Technical Operating Manual.docx  URSIM_URCAP_COMPLETE_SIMULATION.md  Universal_Robots_ROS2_Description_git_diff.txt  Universal_Robots_ROS2_Driver_git_diff.txt  VISION_GUIDED_GRASPING.md  docker-compose.yaml  docker-compose.yaml.bak2  launch_robot.sh  run_tests.sh  start_gripper.sh  startup_robot_system.sh  udo systemctl edit docker.service
src/my_ur_description/: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists_improved.txt  Full_Operating_Instructions.docx  README.md  Terminals_and Commands.odt  package.xml  package.xml.bak  package_improved.xml  setup.cfg  setup.py
src/my_ur_description/config/: moveit_controllers.yaml  ur12e_calibration.yaml  ur_controllers.yaml
src/my_ur_description/launch/: my_robot.launch.py  my_robot.launch.py.bak  my_robot_launch_improved.py  my_robot_ursim_full.launch.py
src/my_ur_description/rviz/: my_robot_view.rviz
src/my_ur_description/scripts/: careful_gripper_test.py  coordinator_brain10_theta_grasp_active_heartbeat.py  direct_move_test.py  direct_move_test_clean_room.py  direct_move_test_ik_clear.py  direct_move_test_ik_jmove.py  direct_move_test_sync.py  (+42 more)
(+31 files in other folders)
